--- a/app/src/main/res/layout/fragment_list_container.xml
+++ b/app/src/main/res/layout/fragment_list_container.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/fragment_root">
-<android.support.v4.widget.ContentLoadingProgressBar
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/list_view_loading_progress_bar"
-    android:visibility="gone"/>
+    android:orientation="vertical">
 
     <ListView
+        android:id="@+id/list_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/list_view_container"
-        android:visibility="visible">
+        android:visibility="gone">
 
     </ListView>
+    <android.support.v4.widget.ContentLoadingProgressBar
+        android:id="@+id/list_view_loading_progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible" />
 
 </LinearLayout>
