--- a/app/src/main/res/layout/fragment_list_container.xml
+++ b/app/src/main/res/layout/fragment_list_container.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+
+    <TextView
+        android:id="@+id/fragment_root_txt_message"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/no_results_found"
+        android:gravity="center"
+        android:visibility="gone"/>
+
     <ListView
         android:id="@+id/list_view_container"
         android:layout_width="match_parent"
@@ -12,10 +22,14 @@
         android:visibility="gone">
 
     </ListView>
+
+
     <android.support.v4.widget.ContentLoadingProgressBar
         android:id="@+id/list_view_loading_progress_bar"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
+        android:layout_gravity="center"
         android:visibility="visible" />
 
 </LinearLayout>
