Image Loader works, add icons for navigation drawer

--- a/app/src/main/res/layout/fragment_list_container.xml
+++ b/app/src/main/res/layout/fragment_list_container.xml
@@ -3,7 +3,9 @@
     android:id="@+id/fragment_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@android:color/white"
+    >
 
 
 
@@ -19,7 +21,8 @@
         android:id="@+id/list_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:background="@android:color/white">
 
     </ListView>
 
