--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,9 +7,15 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main"
-    android:id="@+id/fragment_container">
+    android:id="@+id/fragment_container"
 
+    >
 
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:src="@drawable/budapest_castle"
+    android:scaleType="centerCrop"/>
 
 
 </android.support.constraint.ConstraintLayout>
