--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,19 +7,19 @@
         <item
             android:id="@+id/historical_places"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Historical Places" />
+            android:title="@string/historical_places" />
         <item
             android:id="@+id/events"
             android:icon="@drawable/ic_event_black_24dp"
-            android:title="Events" />
+            android:title="@string/events" />
         <item
             android:id="@+id/sports"
             android:icon="@drawable/ic_directions_run_black_24dp"
-            android:title="Sport" />
+            android:title="@string/sport" />
         <item
             android:id="@+id/restaurants"
             android:icon="@drawable/ic_restaurant_black_24dp"
-            android:title="Restaurants" />
+            android:title="@string/restaurants" />
     </group>
 
 
