--- a/app/src/main/res/layout/fragment_entity_details.xml
+++ b/app/src/main/res/layout/fragment_entity_details.xml
@@ -38,6 +38,7 @@
             android:id="@+id/details_txt_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/entity_title_style"
             tools:text="Lorem ipsum dolor sit amet, consect" />
 
         <TextView
