--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,59 +10,59 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <!-- Image of a place - if available. Else use default image
           taketn from material.io -->
         <ImageView
             android:id="@+id/list_item_ic_image"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="@dimen/list_item_img_width_height"
+            android:layout_height="@dimen/list_item_img_width_height"
             android:layout_gravity="center"
-            android:layout_margin="6dp"
+            android:layout_margin="@dimen/list_item_img_margin"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_image_black_48dp" />
-        <!-- title, address, part of description -->
+        <!-- title, address, part of description layout -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="6dp">
+            android:padding="@dimen/list_item_layout_padding">
 
+            <!-- Title of Entity -->
             <TextView
                 android:id="@+id/list_item_txt_title"
+                style="@style/entity_title_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                tools:text="Lorem ipsum dolor sit amet, consect" />
+                tools:text="@string/loremipsum_35" />
 
+            <!-- Address of Entity -->
             <TextView
                 android:id="@+id/list_item_txt_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="6dp"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
-                tools:text="Lorem ipsum dolor sit amet, consectetuer adip" />
+                style="@style/entity_address_style"
+                tools:text="@string/loremipsum_45" />
 
+            <!-- Short description of Entity -->
             <TextView
                 android:id="@+id/list_item_txt_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="6dp"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp"
-                tools:text="Lorem ipsum dolor sit amet, consectetuer a..." />
+                style="@style/entity_description_style"
+                tools:text="@string/loremipsum_45" />
 
         </LinearLayout>
     </LinearLayout>
-<!-- layout for child-friendly, pets allowed icons + working time/event date -->
+
+    <!-- layout for child-friendly, pets allowed icons + working time/event date -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="6dp">
+        android:layout_margin="@dimen/list_item_icon_layout_margin"
+        android:orientation="horizontal">
 
+        <!-- Child Icon / from Material.io -->
         <ImageView
             android:id="@+id/list_item_icon_child_friendly"
             android:layout_width="wrap_content"
@@ -70,36 +70,38 @@
             android:background="@drawable/backgroud_circle"
             android:src="@drawable/ic_child_friendly_black_24dp" />
 
+        <!-- Pet Icon / from Material.io -->
         <ImageView
             android:id="@+id/list_item_icon_pets_allowed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
+            android:layout_marginLeft="@dimen/list_item_icon_layout_margin"
             android:background="@drawable/backgroud_circle"
             android:src="@drawable/ic_pets_black_24dp" />
+
+        <!-- Working Hours/Date icon / from Material.io -->
         <ImageView
+            android:id="@+id/list_item_icon_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/list_item_icon_time"
-            android:layout_marginLeft="6dp"
+            android:layout_marginLeft="@dimen/list_item_icon_layout_margin"
+            android:src="@drawable/ic_query_builder_black_24dp" />
 
-            android:src="@drawable/ic_query_builder_black_24dp"/>
-
+        <!-- Working hours/Event Date text / from Material.io -->
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
             android:id="@+id/list_item_txt_datetime"
-            tools:text="Lorem ipsum dolor sit ame"
-            android:paddingLeft="6dp"
-            android:layout_gravity="center_vertical"/>
+            android:layout_width="@dimen/o_dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="@dimen/layout_weight_1"
+            android:paddingLeft="@dimen/list_item_icon_layout_margin"
+            tools:text="@string/loremipsum_25" />
+
+        <!-- Navigate to icon /from Material.io -->
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:src="@drawable/ic_navigate_next_black_24dp"/>
+            android:src="@drawable/ic_navigate_next_black_24dp" />
     </LinearLayout>
-
-    <!-- title, address, part of description -->
-
 </LinearLayout>
