--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,25 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <!-- List Item styles -->
+    <!-- List Item and Details text styles -->
+    <!-- Title style -->
+    <style name="entity_title_style">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/list_item_txt_title_textsize</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
+    <!-- address style -->
+    <style name="entity_address_style">
+        <item name="android:paddingTop">@dimen/list_item_txt_address_padding_top</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/list_item_txt_address_textsize</item>
+    </style>
+
+    <!-- description style -->
+    <style name="entity_description_style">
+        <item name="android:paddingTop">@dimen/list_item_txt_address_padding_top</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textSize">@dimen/list_item_txt_address_textsize</item>
+    </style>
 </resources>
