--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,9 @@
     android:id="@+id/fragment_container"
 
     >
-
+<!-- image: By Andrés Nieto Porras from Palma de Mallorca, España - 61/365²: Opulencia. Unidentified locations in Hungary. (Fake coords! This pic taken about two km away!),
+CC BY-SA 2.0, https://commons.wikimedia.org/w/index.php?curid=24332305
+-->
 <ImageView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
